manifest/search.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: searxng
---
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: "searxng"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  namespace: searxng
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "searxng"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "searxng"
    spec:
      serviceAccountName: searxng
      securityContext:
        {}
      containers:
        - name: searxng
          securityContext:
            {}
          image: "searxng/searxng:latest"
          imagePullPolicy: 
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
          volumeMounts:
            - mountPath: /etc/searxng/settings.yml.new
              name: searxng-settings
              subPath: settings.yml
              readOnly: true
            - mountPath: /etc/searxng/limiter.toml
              name: searxng-limiter
              subPath: limiter.toml
              readOnly: true
            - mountPath: /etc/searxng/uwsgi.ini
              name: searxng-uwsgi
              subPath: uwsgi.ini
              readOnly: true
      volumes:
        - name: searxng-settings
          configMap:
            name: searxng-settings
        - name: searxng-limiter
          configMap:
            name: searxng-limiter
        - name: searxng-uwsgi
          configMap:
            name: searxng-uwsgi
---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   labels:
#     app: searxng
#   name: searxng-configmap
#   namespace: searxng
# spec:
#   accessModes: ["ReadWriteOnce"]
#   resources:
#     requests:
#       storage: 2Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng-ingress
  namespace: searxng
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: ingress-nginx-internal
  rules:
  - host: search.<path:stringreplacesecret#domain>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: searxng
            port:
              number: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: searxng-http
  namespace: searxng
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - "search.<path:stringreplacesecret#domain>"
  rules:
  - backendRefs:
    - name: searxng
      port: 8080
